# usbman

./: .gitignore  Pipfile  README.md  __main__.spec  buildit  hatch.toml  lint  package_usbman  parse_usb_json  publish-release  pyproject.toml  requirements.txt  usbman  usbman.py
.github/workflows/: on-release.yml  python-package.yml  python-publish.yml  scorecard.yml
usbman/: __init__.py  __main__.py  cli.py  clicom.py
